--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -33,3 +33,15 @@ monolog:
 
 #swiftmailer:
 #    delivery_address: me@example.com
+bazinga_faker:
+    orm: doctrine
+    entities:
+        AppBundle\Entity\Person:
+            number: 5
+            custom_formatters:
+                fname: { method: firstname, parameters: [ '??????????' ] }
+                lname: { method: lastname, parameters: [ '??????????' ] }
+        AppBundle\Entity\Message:
+            number: 5
+            custom_formatters:
+                topic: { method: lexify, parameters: [ 'topic ??????????' ] }
